<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_repeate">Repeate password</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign In</string>
    
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    
    <string name="user">User : </string>
    <string name="add_note">Add</string>
    <string name="no_items">No Items. Please add notes :)</string>
    
    <string name="title">Title:</string>
    <string name="link">Link:</string>

    <string name="Login_error">Enter valid login and password!</string>
    <string name="Sign_in_error">Enter valid login and password!</string>
    
    <string name="Edit_note_warning">Please fill note correctly!</string>
    
</resources>
