<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical" >
    

    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
    
    <EditText android:id="@+id/activity_login_login_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	/>
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    
    <EditText android:id="@+id/activity_login_password_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
       	/>
    
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/activity_login_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
        <Button android:id="@+id/activity_login_sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>
    </LinearLayout>
    
    
</LinearLayout>
